--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body, #__next {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
 
-.main-content {
-  @apply mr-64;
-  @apply pt-5;
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+#__next {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
